feat: book page header in progress

--- a/src/components/PageHeader/index.less
+++ b/src/components/PageHeader/index.less
@@ -3,16 +3,23 @@
 
 .component-wrapper {
     width: auto;
-    height: 30rem;
     margin: -24px -24px 0 -24px;
     padding: 0 32px;
     background-color: #000;
 }
 
+.ant-row.state-n-status-badge {
+    margin-top: 32px;
+    margin-bottom: 40px;
+}
+
 .stage-text {
     color: #fff;
     text-transform: uppercase;
-    padding-top: 32px;
+}
+
+.status-text {
+    color: #fff;
 }
 
 .content-column {
@@ -32,6 +39,7 @@
 
 .book-subtitle {
     color: #fff;
+    margin-bottom: 0;
 }
 
 .ant-tabs-top > .ant-tabs-nav {
