--- a/src/global.less
+++ b/src/global.less
@@ -21,10 +21,12 @@ font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, '
 
 .ant-btn {
   display: flex;
+  flex-direction: row-reverse;
 }
 
 .ant-btn > span {
   letter-spacing: 0.025rem;
+  margin-right: 3rem;
 }
 
 
