--- a/src/components/PageHeader/index.less
+++ b/src/components/PageHeader/index.less
@@ -1,11 +1,14 @@
 @import '~antd/lib/style/themes/default.less';
 
+h2.ant-typography {
+    margin-bottom: 0.25em;
+}
 
 .component-wrapper {
     width: auto;
     margin: -24px -24px 0 -24px;
     padding: 0 32px;
-    background-color: #000;
+    background-color: #262626;
 }
 
 .ant-row.state-n-status-badge {
@@ -47,9 +50,35 @@
 }
 
 .tabpane-span {
-    display: flex,
+    display: flex;
+    align-items: center;
+    margin-right: 40px;
 }
 
 .tabpane-span-icon {
     margin-right: 8px;
+}
+
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active, .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab-active {
+    background-color: #f5f5f5;
+    border-top-width: 3px;
+    border-top-color: #096dd9;
+}
+
+.ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::before, .ant-tabs-top > div > .ant-tabs-nav::before, .ant-tabs-bottom > div > .ant-tabs-nav::before {
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+}
+
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab, .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
+    border: 0px solid #f0f0f0;
+}
+
+.ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab-active, .ant-tabs-card.ant-tabs-top > div > .ant-tabs-nav .ant-tabs-tab-active > span > .tabpane-span {
+    color:#096dd9;
+}
+
+.ant-tabs.ant-tabs-top.ant-tabs-card {
+    width: 100%;
 }
