--- a/src/components/PageHeader/index.less
+++ b/src/components/PageHeader/index.less
@@ -4,7 +4,7 @@ h2.ant-typography {
     margin-bottom: 0.25em;
 }
 
-.component-wrapper {
+.page-header-wrapper {
     width: auto;
     margin: -24px -24px 0 -24px;
     padding: 0 32px;
