--- a/src/global.less
+++ b/src/global.less
@@ -1,11 +1,11 @@
 @import '~antd/es/style/themes/default.less';
-@import (css) url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+@import (css) url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700&display=swap');
 
 html,
 body,
 #root {
   height: 100%;
-font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: 'Barlow', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .colorWeak {
@@ -24,9 +24,14 @@ font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, '
   flex-direction: row-reverse;
 }
 
-.ant-btn > span {
+.ant-btn.ant-btn-primary > span {
   letter-spacing: 0.025rem;
   margin-right: 3rem;
+}
+
+.ant-btn.ant-btn-link > span {
+  letter-spacing: 0.025rem;
+  margin-right: 0.5rem;
 }
 
 
