--- a/src/global.less
+++ b/src/global.less
@@ -34,6 +34,17 @@ body,
   margin-right: 0.5rem;
 }
 
+.ant-pro-global-header {
+  height: 64px;
+}
+
+header.ant-layout-header {
+  height: 64px !important;
+}
+
+aside.ant-layout-sider {
+  padding-top: 64px !important;
+}
 
 
 canvas {
