style: edit avatar dropdown in global header

--- a/src/components/RightContent/index.less
+++ b/src/components/RightContent/index.less
@@ -7,7 +7,9 @@
     margin-right: 8px;
   }
   :global(.ant-dropdown-menu-item) {
+    display: flex;
     min-width: 160px;
+    padding: 8px 16px;
   }
 }
 
@@ -42,7 +44,6 @@
   }
   .account {
     .avatar {
-      margin-right: 8px;
       color: @primary-color;
       vertical-align: top;
       background: rgba(255, 255, 255, 0.85);
@@ -59,4 +60,8 @@
       background: #252a3d;
     }
   }
+}
+
+.icon {
+  margin-right: 16px;
 }
